--- a/package.json
+++ b/package.json
@@ -60,7 +60,11 @@
     "zod": "^3.24.1",
     "fs": "latest",
     "path": "latest",
-    "gray-matter": "latest"
+    "gray-matter": "latest",
+
+    "marked": "^9.1.5",
+    "highlight.js": "^11.9.0"
+
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -68,6 +72,8 @@
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    
+    "@types/marked": "^5.0.1"
   }
 }
